--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
-<html>
     <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>First WebPage</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        Hello
+        <h1>Heading</h1>
+        <h1>Heading</h1>
+        <h2>Heading</h2>
+        <h3>Heading</h3>
+        <h4>Heading</h4>
+        <h5>Heading</h5>
+        <h6>Heading</h6>
+        <p>Normal</p>
+        <strong>STRONG</strong><br>
+        <b>BOLD</b>     <br>
+        <em>emphasized text</em>
+        <p>2nd child test</p>
+        <a href="./pages/about.html">click</a>
+        <img src="./images/dog.jpg">
     </body>
+
+
+
+
+
+
+
+
     </html>
-</html>
